IOMS-1023: Implemented retrieving list of product.
